--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mysql2": "^3.14.1",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.3"
+    "sequelize-cli": "^6.6.3",
+    "swagger-ui-express": "^5.0.1"
   },
   "description": "",
   "devDependencies": {
