--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "pg": "^8.16.0",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
+    "supertest": "^7.1.1",
     "swagger-ui-express": "^5.0.1"
   },
   "description": "",
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10"
   }
 }
