Actualizando codigo de docker-componse.yml y Dockerfile

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest",
-    "build": "npm run build"
+    "test": "jest"
   },
   "keywords": [],
   "license": "ISC",
